--- a/app/components/home.html
+++ b/app/components/home.html
@@ -1,6 +1,3 @@
-<!-- comment -->
-Home page.
-
-<p>
-    <div demo-component></div>
-</p>
+<div class="wrapper">
+   <img src="images/summer.jpg" class="img-bg" alt="It all began one summer...">
+</div>
