--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,2 +1,34 @@
 @import "settings";
 @import "../../bower_components/foundation/scss/foundation";
+
+// .bg {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//
+//   /* Preserve aspet ratio */
+//   min-width: 100%;
+//   min-height: 100%;
+// }
+
+.img-bg {
+  /* Set rules to fill background */
+  min-height: 100%;
+  min-width: 1024px;
+
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+@media screen and (max-width: 500px) { /* Specific to this particular image */
+  .img-bg {
+    left: 50%;
+    margin-left: -398px;
+  }
+}
